--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-  </body>
-</html>
+---
+layout: page
+---
+
+<div class="home">
+
+	<blockquote>One principle that guided the evolution of Forth and continues to guide its application, is blunty: Keep It Simple. A simple solution has elegance. It is the result of exacting effort to understand the real problem and is recognized by its compelling sense of rightness. I stress this point because it contradicts the conventional view that power increases with complexity. Simplicity provides confidence, reliability, compactnes, and speed.<br>
+
+  (...)<br>
+
+  Forth provides a natural means of communication between man and the smart machines he is surronding himself with. This requires that it share characteristics of human languages, including compactness, versatility, and extensibility. I cannot imagine a better language for writing programs, expressing algorithms, or understanding computers.</blockquote>
+  <p>Charles H. Moore, foreword to the second edition of Leo Brodie's Starting Forth.</p>
+</div>
